fix white-space: nowrap

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7083,11 +7083,6 @@ abbr[title] {
     font-size: 14px;
     color: #a1abb2;
     font-weight: bold; }
-  /* line 728, /www/tvil/sass/tvil/theme */
-  .form-group label {
-    white-space: nowrap; 
-    text-align: left;
-}
 
 /* line 732, /www/tvil/sass/tvil/theme */
 .page-header {
