--- a/sass/tvil/_theme.scss
+++ b/sass/tvil/_theme.scss
@@ -726,7 +726,7 @@ abbr[title]{
     font-weight: bold;
   }
   label {
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 }
 .page-header {
